WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314329
[WGSL] shader,validation,expression,binary,add_sub_mul:* is failing
https://bugs.webkit.org/show_bug.cgi?id=314329
Summary
[WGSL] shader,validation,expression,binary,add_sub_mul:* is failing
Tadeu Zagallo
Reported
2026-05-07 10:04:16 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-07 10:04:25 PDT
<
rdar://problem/176473479
>
Tadeu Zagallo
Comment 2
2026-05-07 10:09:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64476
EWS
Comment 3
2026-05-12 23:10:45 PDT
Committed
313135@main
(5b4b8fc2a875): <
https://commits.webkit.org/313135@main
> Reviewed commits have been landed. Closing PR #64476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug