[WGSL] shader,validation,expression,binary,add_sub_mul:* is failing https://bugs.webkit.org/show_bug.cgi?id=314329 rdar://176473479

Reviewed by Mike Wyrzykowski.

Add the missing validation for addition, subtraction and multiplication
operations involving override values.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/binary/add_sub_mul-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::containsInfinity):
(WGSL::VALIDATION_FUNCTION):
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/generator/main.rb:

Canonical link: https://commits.webkit.org/313135@main